[package]
name = "cobalt_locatch"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "api_test"
path = "src/bin/api_test.rs"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
env_logger = "=0.11.5"
log = "0.4.22"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
