[package]
name = "cobalt_locatch"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "main"
path = "src/main/main.rs"

[[bin]]
name = "tunnel_test"
path = "src/bin/tunnel_test.rs"

[dependencies]
futures-util = "0.3.30"
sanitize-filename = "0.5.0"
clap = { version = "4.5.13", features = ["derive"] }
env_logger = "=0.11.5"
log = "0.4.22"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["stream"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "fs"] }
encoding_rs = "0.8.34"