# Cobalt interface/representation

[package]
name = "locatch_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "locatch_lib"
path = "src/lib.rs"

[dependencies]
locatch_macro.workspace = true

serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true