# Execution lib

[package]
name = "locatch_process"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "locatch_process"
path = "src/lib.rs"

[dependencies]
locatch_macro.workspace = true
locatch_lib.workspace = true

tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
sanitize-filename.workspace = true
clap.workspace = true